<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.redukti</groupId>
    <artifactId>beam42</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>beam42</module>
        <module>rayoptics</module>
        <module>mathlib</module>
        <module>render</module>
        <module>tools</module>
        <module>optimcommon</module>
        <module>optimr</module>
        <module>optimr2</module>
    </modules>

    <!-- Optionally define shared properties or dependency versions -->
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
</project>
